// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`feature toggles test basic apis _changeRemoteFeatureValues 2`] = `
{
  "test/feature_a": {},
  "test/feature_b": {},
  "test/feature_c": {},
  "test/feature_d": {},
  "test/feature_e": {},
  "test/feature_f": {},
  "test/feature_g": {},
  "test/feature_h": {},
}
`;

exports[`feature toggles test basic apis _changeRemoteFeatureValues 3`] = `
{
  "test/feature_a": {},
  "test/feature_b": {},
  "test/feature_c": {
    "rootValue": "new_a",
  },
  "test/feature_d": {},
  "test/feature_e": {},
  "test/feature_f": {},
  "test/feature_g": {},
  "test/feature_h": {},
}
`;

exports[`feature toggles test basic apis getFeaturesInfos 1`] = `
{
  "test/feature_a": {
    "config": {
      "TYPE": "boolean",
    },
    "fallbackValue": false,
  },
  "test/feature_b": {
    "config": {
      "TYPE": "number",
    },
    "fallbackValue": 1,
  },
  "test/feature_c": {
    "config": {
      "TYPE": "string",
    },
    "fallbackValue": "best",
  },
  "test/feature_d": {
    "config": {
      "TYPE": "boolean",
      "VALIDATION": "^(?:true)$",
    },
    "fallbackValue": true,
  },
  "test/feature_e": {
    "config": {
      "TYPE": "number",
      "VALIDATION": "^\\d{1}$",
    },
    "fallbackValue": 5,
  },
  "test/feature_f": {
    "config": {
      "TYPE": "string",
      "VALIDATION": "^(?:best|worst)$",
    },
    "fallbackValue": "best",
  },
  "test/feature_g": {
    "config": {
      "ACTIVE": false,
      "TYPE": "string",
    },
    "fallbackValue": "activeTest",
  },
  "test/feature_h": {
    "config": {
      "APP_URL": "\\.cfapps\\.sap\\.hana\\.ondemand\\.com$",
      "APP_URL_ACTIVE": true,
      "TYPE": "string",
    },
    "fallbackValue": "appUrlTest",
  },
}
`;

exports[`feature toggles test basic apis initializeFeatureToggles 1`] = `
{
  "test/feature_a": {
    "TYPE": "boolean",
  },
  "test/feature_b": {
    "TYPE": "number",
  },
  "test/feature_c": {
    "TYPE": "string",
  },
  "test/feature_d": {
    "TYPE": "boolean",
    "VALIDATION": "^(?:true)$",
    "VALIDATION_REG_EXP": /\\^\\(\\?:true\\)\\$/,
  },
  "test/feature_e": {
    "TYPE": "number",
    "VALIDATION": "^\\d{1}$",
    "VALIDATION_REG_EXP": /\\^\\\\d\\{1\\}\\$/,
  },
  "test/feature_f": {
    "TYPE": "string",
    "VALIDATION": "^(?:best|worst)$",
    "VALIDATION_REG_EXP": /\\^\\(\\?:best\\|worst\\)\\$/,
  },
  "test/feature_g": {
    "ACTIVE": false,
    "TYPE": "string",
  },
  "test/feature_h": {
    "APP_URL": "\\.cfapps\\.sap\\.hana\\.ondemand\\.com$",
    "APP_URL_ACTIVE": true,
    "TYPE": "string",
  },
}
`;
